--- a/bundles/org.eclipse.e4.tools.emf.ui/build.properties
+++ b/bundles/org.eclipse.e4.tools.emf.ui/build.properties
@@ -2,11 +2,13 @@
 # <copyright>
 # </copyright>
 #
-# $Id: build.properties,v 1.1 2010/03/03 21:12:20 tschindl Exp $
+# $Id: build.properties,v 1.2 2010/03/16 22:03:26 tschindl Exp $
 
 bin.includes = .,\
                META-INF/,\
-               plugin.properties
+               plugin.properties,\
+               icons/,\
+               about.html
 jars.compile.order = .
 source.. = src/
 output.. = bin/
