--- a/bundles/org.eclipse.e4.tools.emf.ui/build.properties
+++ b/bundles/org.eclipse.e4.tools.emf.ui/build.properties
@@ -1,14 +1,9 @@
-
-# <copyright>
-# </copyright>
-#
-# $Id: build.properties,v 1.2 2010/03/16 22:03:26 tschindl Exp $
-
 bin.includes = .,\
                META-INF/,\
                plugin.properties,\
                icons/,\
-               about.html
+               about.html,\
+               OSGI-INF/contributioncollector.xml
+output.. = bin/
 jars.compile.order = .
 source.. = src/
-output.. = bin/
